@@ -2,8 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>space.nanobreaker</groupId>
+
+    <groupId>dev.thatwhichis</groupId>
     <artifactId>htmx-qute-quarkus</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -11,25 +13,31 @@
     <modules>
         <module>library</module>
         <module>framework</module>
-        <module>application/configuration/monolith-configuration</module>
-        <module>application/core/domain/v1</module>
-        <module>application/core/usecases/v1</module>
-        <module>application/infrastructure/dataproviders/postgres-dataprovider/v1</module>
+        <module>core</module>
+        <module>app</module>
+        <module>adapters/inbound/rest-adapter</module>
+        <module>adapters/outbound/jpa-adapter</module>
+        <module>boot</module>
     </modules>
 
     <properties>
-        <maven.compiler.release>24</maven.compiler.release>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
+        <maven.compiler.release>25</maven.compiler.release>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.17.4</quarkus.platform.version>
+        <quarkus.platform.version>3.35.2</quarkus.platform.version>
+
         <compiler-plugin.version>3.13.0</compiler-plugin.version>
         <surefire-plugin.version>3.1.2</surefire-plugin.version>
+
         <skipITs>true</skipITs>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -38,48 +46,52 @@
                 <version>${quarkus.platform.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>net.bytebuddy</groupId>
-                        <artifactId>byte-buddy</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy</artifactId>
-                <version>1.15.10</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>space.nanobreaker</groupId>
+                <groupId>dev.thatwhichis</groupId>
                 <artifactId>library</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>space.nanobreaker</groupId>
+                <groupId>dev.thatwhichis</groupId>
                 <artifactId>framework</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>space.nanobreaker</groupId>
-                <artifactId>core-domain-v1</artifactId>
+                <groupId>dev.thatwhichis</groupId>
+                <artifactId>core</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>space.nanobreaker</groupId>
-                <artifactId>core-usecases-v1</artifactId>
+                <groupId>dev.thatwhichis</groupId>
+                <artifactId>app</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>space.nanobreaker</groupId>
-                <artifactId>infrastructure-dataproviders-postgres-v1</artifactId>
+                <groupId>dev.thatwhichis</groupId>
+                <artifactId>rest-adapter</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>dev.thatwhichis</groupId>
+                <artifactId>jpa-adapter</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>dev.thatwhichis</groupId>
+                <artifactId>boot</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>io.github.dcadea</groupId>
                 <artifactId>jresult</artifactId>
                 <version>0.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.27.7</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -94,8 +106,7 @@
                 <version>${surefire-plugin.version}</version>
                 <configuration>
                     <systemPropertyVariables>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager
-                        </java.util.logging.manager>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
                     </systemPropertyVariables>
                 </configuration>
@@ -130,14 +141,6 @@
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
                     <extensions>true</extensions>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                        <jvmArgs>--enable-preview</jvmArgs>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
-                    </configuration>
                     <executions>
                         <execution>
                             <goals>
@@ -163,38 +166,6 @@
                 <skipITs>false</skipITs>
                 <quarkus.package.type>native</quarkus.package.type>
             </properties>
-        </profile>
-        <profile>
-            <id>monolith</id>
-            <activation/>
-            <modules>
-                <module>library</module>
-                <module>framework</module>
-                <module>application/configuration/monolith-configuration</module>
-                <module>application/core/domain/v1</module>
-                <module>application/core/usecases/v1</module>
-                <module>application/infrastructure/dataproviders/postgres-dataprovider/v1</module>
-            </modules>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>${quarkus.platform.group-id}</groupId>
-                        <artifactId>${quarkus.platform.artifact-id}</artifactId>
-                        <version>${quarkus.platform.version}</version>
-                        <type>pom</type>
-                        <scope>import</scope>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-        </profile>
-        <profile>
-            <id>locker</id>
-            <activation>
-                <property>
-                    <name>!unlocked</name>
-                </property>
-            </activation>
-            <dependencyManagement/>
         </profile>
     </profiles>
 </project>
